# C-Basic-FPS-Game

./: CMakeLists.txt  README.md
devcontainer/: devcontainer.json  setup-emsdk.sh
src/: main.cpp
